--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ POSTGRES_PORT=5433
 POSTGRES_DATABASE=dnd_test
 
 JWT_SECRET=top_secret
-DND_5e_API=https://www.dnd5eapi.co/api/
+DND_5e_API=https://www.dnd5eapi.co/api
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
