--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev:load-envs": "dotenv -e .env.development",
     "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
     "dev:migration:generate": "npm run dev:load-envs prisma migrate dev",
+    "all:migration": "npm run test:load-envs prisma migrate dev && npm run test:load-envs prisma migrate deploy && npm run dev:load-envs prisma migrate dev && npm run dev:load-envs prisma migrate deploy",
     "dev:seed": "npm run dev:load-envs prisma db seed",
     "dev": "cross-env NODE_ENV=development nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts"
   },
